# space-tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TetrisConfig.h.in
src/: Background.h  CMakeLists.txt  GameConfig.h  Grid.h  Keys.h  Manager.h  Scale.h  Sound.h  Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters  TetrisConfig.h.in  Tetromino.h  Text.h  Timer.h  main.cpp
